--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@chakra-ui/core": "^0.2.8",
     "@emotion/core": "^10.0.17",
     "@emotion/styled": "^10.0.17",
+    "@sendgrid/mail": "^6.5.4",
     "@stripe/react-stripe-js": "1.0.0-beta.3",
     "@stripe/stripe-js": "1.0.0-beta.4",
     "apollo-datasource-graphql": "1.3.2",
