--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "es6-promise": "4.2.8",
     "gatsby": "2.18.12",
     "gatsby-image": "^2.2.33",
+    "gatsby-plugin-manifest": "^2.2.47",
     "gatsby-plugin-postcss": "2.1.13",
     "gatsby-plugin-purgecss": "4.0.1",
     "gatsby-plugin-react-helmet": "^3.1.18",
