--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-dom": "16.10.2",
     "react-helmet": "^5.2.1",
     "react-hook-form": "4.5.6",
+    "react-spring": "^8.0.27",
     "react-toastify": "^5.4.1",
     "react-use-cart": "1.2.2",
     "stripe": "^7.14.0"
