--- a/package.json
+++ b/package.json
@@ -38,12 +38,12 @@
     "graphql-hooks": "4.1.1",
     "isomorphic-fetch": "2.2.1",
     "md5": "^2.2.1",
-    "postmark": "2.3.4",
     "query-string": "^6.9.0",
     "react": "16.10.2",
     "react-dom": "16.10.2",
     "react-helmet": "^5.2.1",
     "react-hook-form": "4.5.6",
+    "react-markdown": "^4.3.1",
     "react-spring": "^8.0.27",
     "react-toastify": "^5.4.1",
     "react-use-cart": "1.2.2",
