--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "currency-formatter": "1.5.5",
     "emotion-theming": "10.0.27",
     "es6-promise": "4.2.8",
-    "gatsby": "2.18.12",
+    "gatsby": "^2.25.3",
     "gatsby-image": "^2.2.33",
     "gatsby-plugin-facebook-pixel": "^1.0.3",
     "gatsby-plugin-manifest": "^2.2.47",
@@ -29,7 +29,7 @@
     "gatsby-plugin-purgecss": "4.0.1",
     "gatsby-plugin-react-helmet": "^3.1.18",
     "gatsby-plugin-react-svg": "3.0.0",
-    "gatsby-plugin-sharp": "^2.3.3",
+    "gatsby-plugin-sharp": "^2.7.1",
     "gatsby-source-filesystem": "^2.1.42",
     "gatsby-source-graphql": "2.1.20",
     "gatsby-source-printful": "1.2.0",
